fix:for要先开一个scope，body再开一个scope